--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ body {
     position: sticky;
     top: 0;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+    z-index: 7;
 }
 
 .nav-links {
@@ -202,5 +203,71 @@ li {
 }
 
 .inner-skill p {
+    margin: 0;
+}
+
+.projects_header {
+    display: flex;
+    font-size: 60px;
+    font-weight: normal;
+    justify-content: center;
+}
+.projects {
+    padding-top: 4%;
+    padding-bottom: 4%;
+}
+
+.portfolio-container1 {
+    width: 100%;
+    position: relative;
+    text-align: left;
+}
+
+.portfolio-container2 {
+    width: 100%;
+    position: relative;
+    text-align: left;
+}
+
+.inner-portfolio{
+    position: absolute;
+    top: 43%;
+    left: 53%;
+    transform: translate(-50%, -50%);
+    font-size: 32px;
+}
+
+.portfolio-title {
+    font-size: 50px;
+    font-weight: 300;
+    width: min-content;
+    white-space: nowrap;
+}
+
+.portfolio-title p {
+    margin: 0;
+}
+
+.portfolio-title svg {
+    padding-bottom: 10%;
+}
+
+.project-background {
+    display: block;
+    margin-top: 4%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 1465px;
+    height: 485px;
+}
+
+.project-preview {
+    position: absolute;
+    top: 30%;
+    left: 20%;
+    transform: translate(-50%, -50%);
+}
+
+.portfolio-desc {
     margin: 0;
 }
