--- a/css/styles.css
+++ b/css/styles.css
@@ -110,10 +110,33 @@ li {
     margin-top: 150px;
 }
 
-#call-to-action {
-    margin-top: 25px;
+#learn-more {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    color: white;
+    background-color: #6C63FF;
+    border: 0;
+    height: 81px;
+    transform: translate(140 795);
+    font-size: 28px;
+    border-radius: 50px;
+    width: 227px;
+    margin-top: 30px;
+    transition-duration: 0.2s;
 }
 
+#learn-more a {
+    text-decoration: none;
+    color: white;
+}
+
+#learn-more:hover {
+    background-color: #4B45B2;
+}
+
+#learn-more:visited {
+    text-decoration: none;
+}
 /*Styles rules for skills*/
 .skills {
     background-color: #202024;
